# arbitrage-trading

./: .env.example  .gitignore  CLAUDE.md  README.md  REFACTOR_BRIEF.md  TECHNICAL.md  pyproject.toml
Suggest To Delete/: README.md
Suggest To Delete/docs/: AI_Workflow.md
Suggest To Delete/layer0/: TEST-ONLY 15m Loop INDICATOR.pine
config/: allowed_pairs.json  phase_config.json  propfirm_config.json  risk_params.json  symbol_map.json  symbols.json  trading_window.json
docs/: Account_Currency_Decision.md  MT5_VPS_Connection_Postmortem.md  Project_Overview.md  README.md  SESSION_HANDOFF.md  SESSION_LOG.md  Sample_Logs.md  System_Architecture.md  VPS_MT5_Setup.md
docs/personal-leg/: 00-AGENT-START-HERE.md  01-master-plan.md  02-calculation-parity.md  03-build-prompt.md  04-system-architecture.md  05-data-contracts.md  06-build-tasks.md  07-telegram-spec.md  08-test-plan.md  09-deploy-runbook.md  10-prop-follower.md  (+2 more)
handoff/: SESSION-HANDOFF.md
layer0/: 1D-15m Breakout INDICATOR.pine  1D-15m Breakout STRATEGY.pine  Nadaraya-Watson Webhook INDICATOR.pine  TEST-ONLY 15m Loop INDICATOR.pine  signal_engine.pine  signal_engine_backtest.pine
layer1/: ff_calendar.py  main.py  news_filter.py
layer2/: logic_core.py  phase1_strategy.py  phase2_strategy.py  state.py  strategy_common.py  symbols.py  telegram_handlers.py  zmq_helpers.py
layer3/: _retry.py  _worker_core.py  autologin_check.py  env_journal_personal.txt  env_journal_prop.txt  symbol_mapper.py  worker_personal.py  worker_prop.py
scripts/: backfill_journal.py  test_firebase_write.py
tests/: conftest.py
(+50 files in other folders)
