[project]
name = "trade-execution-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pyzmq>=26.0.0",
    "python-telegram-bot>=21.0",
]

[project.optional-dependencies]
# Install on Layer 3 Windows VPS only: uv sync --extra layer3
layer3 = [
    "MetaTrader5>=5.0.45",
    "tzdata>=2024.1",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["layer1", "layer2", "layer3"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]
